<resources>
    <string name="app_name">Sisca</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="lokasi">Lokasi</string>
    <string name="id_aset">ID Aset</string>
    <string name="show_asset_details">Show Asset Details</string>

    <string name="tab_home">Home</string>
    <string name="tab_profile">Profile</string>
    <string name="tab_register">Register</string>
    <string name="tab_search">Search</string>
    <string name="tab_scan">Scan</string>

    <string name="home_features">Features</string>

    <string name="todays_date">Today\'s date</string>
    <string name="features">Features</string>
    <string name="settings">Settings</string>

    <string name="bluetooth_feature">Bluetooth Reader</string>
    <string name="uhf_feature">UHF Reader</string>
    <string name="qr_feature">QR Code Reader</string>
    <string name="input_feature">Input Manually</string>
    <string name="extra_feature">Extra Reader</string>

    <string name="scan_here">Scan Here</string>
    <string name="title_activity_bluetooth">BluetoothActivity</string>

    <string name="item_detected">Items Detected</string>
    <string name="register_all_item">Register All Items</string>

    <string name="search_asset">Search Asset</string>
    <string name="filter_asset">Filter Asset</string>
    <string name="no_results">No Results</string>
    <string name="try_another_keyword">Try searching with another keyword</string>
    <string name="id">ID</string>
    <string name="name">Name</string>

    <!--<string name="nav_home">Home</string>-->
    <string name="nav_home">Beranda</string>
    <string name="nav_assets">Assets</string>
    <!--<string name="nav_report">Report</string>-->
    <string name="nav_report">Monitoring</string>
    <!--<string name="nav_profile">Profile</string>-->
    <string name="nav_account">Akun</string>
    <string name="nav_settings">Settings</string>
    <!---->
    <string name="nav_mutation">Mutasi</string>

    <string name="users">Users</string>
    <string name="assets">Assets</string>
    <string name="dashboard">Dashboard</string>
    <string name="assets_by_labels">Assets By Labels</string>
    <string name="see_more">See More</string>

    <string name="all_assets">All Assets</string>
    <string name="create_new">Create New</string>

    <string name="asset_tag">Asset Tag :</string>
    <string name="serial">Serial :</string>
    <string name="quantity">Quantity :</string>
    <string name="view">View</string>

    <string name="person_name">Person Name</string>
    <string name="position">Position</string>
    <string name="website">Website</string>
    <string name="phone">Phone</string>
    <string name="fax">Fax</string>
    <string name="zip_code">Zip Code</string>
    <string name="email">Email</string>
    <string name="location">Location</string>
    <string name="address">Address</string>

    <string name="activity_report">Activity Report</string>
    <string name="audit_log">Audit Log</string>
    <string name="depreciation">Depreciation</string>
    <string name="assets_maintenance">Assets Maintenance</string>

    <string name="category_of_assets">Category of Assets</string>
    <string name="all">All</string>
    <string name="deployed">Deployed</string>
    <string name="deployable">Deployable</string>
    <string name="pending">Pending</string>
    <string name="undeployable">Undeployable</string>
    <string name="archived">Archived</string>

    <string name="status_label">Status Label</string>
    <string name="supplier">Supplier</string>
    <string name="asset_model">Asset Model</string>
    <string name="category">Category</string>
    <string name="company">Company</string>
    <string name="manufacturer">Manufacturer</string>

    <string name="list_asset">List Asset</string>
    <string name="view_detail">View Detail</string>

    <string name="form_create_new_asset">Form Create Asset</string>
    <string name="save">Save</string>

    <string name="asset_name">Asset Name</string>
    <string name="asset_tag_1">Asset Tag</string>
    <string name="model">Model</string>
    <string name="serial_1">Serial</string>
    <string name="purchase_date">Purchase Date</string>
    <string name="order_number">Order Number</string>
    <string name="purchase_cost">Purchase Cost</string>
    <string name="warranty_months">Warranty Months</string>
    <string name="notes">Notes</string>
    <string name="image">Image</string>
    <string name="upload">Upload</string>

    <string name="form_status_label">Form Create Status Label</string>
    <string name="type">Type</string>

    <string name="form_assets_model">Form Create Assets Model</string>
    <string name="model_name">Model Name</string>
    <string name="model_number">Model Number</string>

    <string name="form_category">Form Create Category</string>

    <string name="form_manufacturer">Form Create Manufacturer</string>
    <string name="url">URL</string>
    <string name="support_url">Support URL</string>
    <string name="support_phone">Support Phone</string>
    <string name="support_email">Support Email</string>

    <string name="form_supplier">Form Create Supplier</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="country">Country</string>

    <string name="status_type">Status Type</string>

    <string name="edit_asset_data">Edit Asset Data</string>
    <string name="edit_category">Edit Category</string>

    <string name="model_details">Model Details</string>
    <string name="manufacturer_details">Manufacturer Details</string>
    <string name="supplier_details">Supplier Details</string>

    <string name="lorem_ipsum_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ac nulla lacinia mauris facilisis lacinia in ac turpis. Pellentesque suscipit lacus vitae dui dignissim tristique</string>

    <string name="pilih_lokasi">Pilih Lokasi</string>
    <string name="pilih_pic">Pilih PIC</string>
</resources>
