<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--<item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home"/>

    <item
        android:id="@+id/nav_assets"
        android:icon="@drawable/ic_asset"
        android:title="@string/nav_assets"/>

    <item
        android:id="@+id/nav_report"
        android:icon="@drawable/ic_description"
        android:title="@string/nav_report"/>

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_account_circle"
        android:title="@string/nav_profile"/>

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_settings"/>-->

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_border"
        app:showAsAction="ifRoom"
        android:title="@string/nav_home"/>

    <item
        android:id="@+id/nav_report"
        android:icon="@drawable/ic_monitoring_border"
        app:showAsAction="ifRoom"
        android:title="@string/nav_report"/>

    <item
        android:id="@+id/nav_mutation"
        android:icon="@drawable/ic_mutasi_border"
        app:showAsAction="ifRoom"
        android:title="@string/nav_mutation"/>

    <item
        android:id="@+id/nav_account"
        android:icon="@drawable/ic_account_border"
        app:showAsAction="ifRoom"
        android:title="@string/nav_account"/>

</menu>