<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Assets Name layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:weightSum="5">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.7"
            android:gravity="center_vertical"
            android:text="@string/asset_name"/>

        <EditText
            android:id="@+id/et_asset_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3.3"
            android:textSize="12sp"/>

    </LinearLayout>

    <!-- Assets Tag layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:weightSum="5">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.7"
            android:gravity="center_vertical"
            android:text="@string/asset_tag_1"
            />

        <EditText
            android:id="@+id/et_asset_tag"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3.3"
            android:textSize="12sp"/>

    </LinearLayout>

    <!-- Company layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:weightSum="5">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.7"
            android:gravity="center_vertical"
            android:text="@string/company"/>

        <Spinner
            android:id="@+id/spn_company"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2">

        </Spinner>

    </LinearLayout>

    <!-- Model layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:weightSum="5">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.7"
            android:gravity="center_vertical"
            android:text="@string/model"/>

        <Spinner
            android:id="@+id/spn_model"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2">

        </Spinner>

    </LinearLayout>

    <!-- Status Label layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:weightSum="5">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.7"
            android:gravity="center_vertical"
            android:text="@string/status_label"/>

        <Spinner
            android:id="@+id/spn_status_label"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2">

        </Spinner>

    </LinearLayout>

    <!-- Serial layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:weightSum="5">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.7"
            android:gravity="center_vertical"
            android:text="@string/serial_1"/>

        <EditText
            android:id="@+id/et_serial"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3.3"
            android:textSize="12sp"/>

    </LinearLayout>

    <!-- Purchase Date layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:weightSum="5">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.7"
            android:gravity="center_vertical"
            android:text="@string/purchase_date"/>

        <EditText
            android:id="@+id/et_purchase_date"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3.3"
            android:textSize="12sp"/>

    </LinearLayout>

    <!-- Supplier layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:weightSum="5">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.7"
            android:gravity="center_vertical"
            android:text="@string/supplier"/>

        <EditText
            android:id="@+id/et_supplier"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3.3"
            android:textSize="12sp"/>

    </LinearLayout>

    <!-- Order Number layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:weightSum="5">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.7"
            android:gravity="center_vertical"
            android:text="@string/order_number"/>

        <EditText
            android:id="@+id/et_order_number"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3.3"
            android:textSize="12sp"/>

    </LinearLayout>

    <!-- Purchase Cost layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:weightSum="5">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.7"
            android:gravity="center_vertical"
            android:text="@string/purchase_cost"/>

        <EditText
            android:id="@+id/et_purchase_cost"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3.3"
            android:textSize="12sp"/>

    </LinearLayout>

    <!-- Warranty Months layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:weightSum="5">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.7"
            android:gravity="center_vertical"
            android:text="@string/warranty_months"/>

        <EditText
            android:id="@+id/et_warranty_months"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3.3"
            android:textSize="12sp"/>

    </LinearLayout>

    <!-- Notes layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:weightSum="5">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.7"
            android:paddingTop="10dp"
            android:text="@string/notes"/>

        <EditText
            android:id="@+id/et_notes"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3.3"
            android:inputType="textMultiLine"
            android:maxLines="8"
            android:scrollbars="vertical"
            android:textSize="12sp"/>

    </LinearLayout>

    <!-- Location layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:weightSum="5">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.7"
            android:gravity="center_vertical"
            android:text="@string/location"/>

        <Spinner
            android:id="@+id/spn_location"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2">

        </Spinner>

    </LinearLayout>

    <!-- Image layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal"
        android:weightSum="5">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.7"
            android:gravity="center_vertical"
            android:text="@string/image"/>

        <Button
            android:id="@+id/btn_upload"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1.5"
            android:layout_gravity="center_vertical"
            android:background="@drawable/btn_rounded"
            android:text="@string/upload"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

    </LinearLayout>

</LinearLayout>