<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!-- Model Name layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:weightSum="5">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:text="@string/model_name"/>

        <EditText
            android:id="@+id/et_model_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"/>

    </LinearLayout>

    <!-- Model Number layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:weightSum="5">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:text="@string/model_number"/>

        <EditText
            android:id="@+id/et_model_number"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"/>

    </LinearLayout>

    <!-- Manufacturer layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:weightSum="5">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:text="@string/manufacturer"/>

        <Spinner
            android:id="@+id/spn_manufacturer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2">

        </Spinner>

    </LinearLayout>

    <!-- Category layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:weightSum="5">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:text="@string/category"/>

        <Spinner
            android:id="@+id/spn_category"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2">

        </Spinner>

    </LinearLayout>

    <!-- Depreciation layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:weightSum="5">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:text="@string/depreciation"/>

        <Spinner
            android:id="@+id/spn_depreciation"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2">

        </Spinner>

    </LinearLayout>

    <!-- Image layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:weightSum="5">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:text="@string/image"/>

        <Button
            android:id="@+id/btn_upload"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:background="@drawable/btn_rounded"
            android:text="@string/upload"
            android:textColor="@android:color/white"
            android:textSize="12sp"/>

    </LinearLayout>

</LinearLayout>